# mina-asm

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  mina-asm
src/: main.cpp
src/headers/: lib.h
src/headers/mina/: assembler.h  mina.h  parser.h  token.h
src/headers/test/: instr.h  test.h
src/mina/: assembler.cpp  directive.cpp  immediate.cpp  instr.cpp  parser.cpp
src/test/: imm_operand.cpp  instr.cpp  parser.cpp  test.cpp
test_programs/: arith.mina  arith.s  branch.mina  branch.s  cmp.mina  cmp.s  control.mina  control.s  dw.mina  dw.s  equ.mina  equ.s  error.s  expr.mina  expr.s  file.mina  file.s  include.inc  include.mina  include.s  logical.mina  logical.s  mem.mina  mem.s  mov.mina  mov.s  reg_branch.mina  reg_branch.s  shift.mina  shift.s  string.mina  string.s  thog.mina  thog.s
